# harpathgroup

./: .gitignore  Dockerfile  fly.toml  hello.py  pyproject.toml  run.sh
harpathgroup/: __init__.py  admin.py  db_runner.py  locations.py  schema.sql  util.py  views.py
harpathgroup/models/: form_helper.py  hotel.py  hotel_photo.py  location.py
harpathgroup/static/: admin.css  global.css  home.css  locations.css  naples.css
harpathgroup/templates/: admin_hotels.html  admin_hotels_form.html  admin_locations.html  admin_locations_edit.html  admin_locations_form.html  admin_locations_new.html  home.html  hotel.html  layout.html  locations.html  locations_show.html  naples.html
